# pb_contracts

./: Makefile  Procfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 9213dc31579b_.py
contract_manager/: __init__.py  db_tools.py  main.py  models.py  schemas.py
contract_manager/api/: routes.py  service.py
contract_manager/api/local_routes/: api.py
contract_manager/templates/: for_pdf.css  template.md
