[tool.poetry]
name = "contract_manager"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
fastapi = "^0.78.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
pydantic = "^1.9.1"
xhtml2pdf = "^0.2.7"
Markdown = "^3.3.7"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
